chap9 テスト以外実装完了

--- a/core/app/assets/stylesheets/page/_login.scss
+++ b/core/app/assets/stylesheets/page/_login.scss
@@ -16,10 +16,17 @@
         @extend .form;
 
         .form-with-border{
+            font-weight: 400;
             @extend .form-with-border;
         }
 
+        .checkbox{
+            color: $dark-gray;
+            font-size: small
+        }
+
         .form-button{
+            margin-top: 20px;
             @extend .form-button;
         }
     }
