--- a/core/app/assets/stylesheets/_variables.scss
+++ b/core/app/assets/stylesheets/_variables.scss
@@ -9,3 +9,5 @@ $dark-pink:#9f2a2ad2;
 $light-green: #c9efbfe9;
 $dark-green:#2b893c;
 $red: #dc4f5d;
+$light-yellow: #f7efb4e9;
+$dark-yellow: #c4aa1ce9;
